<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_normal"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal">

        <ImageView
            android:id="@+id/ivStudentPhoto"
            android:layout_width="@dimen/avatar_size_small"
            android:layout_height="@dimen/avatar_size_small"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/student_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvStudentName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Nombre del Alumno"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivStudentPhoto"
            app:layout_constraintEnd_toStartOf="@id/chipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPresent"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/present"
                app:chipBackgroundColor="@color/chip_attendance_selector"
                app:chipStrokeColor="@color/chip_attendance_stroke_selector"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/chip_attendance_text_selector"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLate"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/late"
                app:chipBackgroundColor="@color/chip_attendance_selector"
                app:chipStrokeColor="@color/chip_attendance_stroke_selector"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/chip_attendance_text_selector"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAbsent"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absent"
                app:chipBackgroundColor="@color/chip_attendance_selector"
                app:chipStrokeColor="@color/chip_attendance_stroke_selector"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/chip_attendance_text_selector"/>

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>